// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip component matches snapshot (default props) 1`] = `
<button
  className="fdsChip border--focus--noTransition transition--default fdsChip--m fdsChip--gray"
>
  <span>
    <span
      className="fdsChip-label"
    >
      foo
    </span>
  </span>
</button>
`;

exports[`Chip component matches snapshot (set all props) 1`] = `
<button
  className="fdsChip--active fdsChip border--focus--noTransition transition--default fdsChip--m fdsChip--blue"
>
  <div
    className="fdsChip-icon"
  >
    <StarFilledIcon
      customSize={16}
    />
  </div>
  <span>
    <span
      className="fdsChip-label"
    >
      foo
    </span>
    <span
      className="fdsChip-subtitle"
    >
      bar
    </span>
  </span>
  <span
    className="fdsChip-close border--focus"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <DenyIcon
      customSize={10}
    />
  </span>
</button>
`;
